syntax = "proto3";
package emortal.model;

option java_package = "dev.emortal.api.model.relationship";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/model/relationship";

message FriendRequest {
  string sender_id = 1;
  string sender_username = 2;
  string target_id = 3;
}

message PlayerBlock {
  string blocker_id = 1;
  string blocked_id = 2;
}